<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bookTitleDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bookAuthorFirstNameDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/book_author_first_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bookAuthorLastNameDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/book_author_last_name"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bookTypeDB"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:text="@string/type_db"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bookYearOfPublicationDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year_of_publication"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/bookStatusDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_db"
        android:textSize="20sp" />

</LinearLayout>