<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/movieTitleDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/movieDirectorFirstNameDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/movie_director_first_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/movieDirectorLastNameDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/movie_director_last_name"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/movieTypeDB"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type_db"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/movieReleaseDateDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/year_of_publication"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/movieStatusDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_db"
        android:textSize="20sp" />
</LinearLayout>