<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="80sp"
        android:text="@string/app_name"
        android:textColor="#2A2532"
        android:textSize="80sp" />

    <Button
        android:id="@+id/go_to_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#673AB7"
        android:text="@string/main_books"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <Button
        android:id="@+id/go_to_games"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#673AB7"
        android:text="@string/main_game"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <Button
        android:id="@+id/go_to_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#673AB7"
        android:text="@string/main_movie"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#673AB7"
        android:text="@string/logout_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />
</LinearLayout>