<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BookInput" >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBook"
        android:layout_width="match_parent"
        android:layout_height="568dp"
        android:layout_weight="10" />

    <EditText
        android:id="@+id/bookTitleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/bookAuthorFirstNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/book_author_first_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/bookAuthorLastNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/book_author_last_name"
            android:textSize="18sp" />

    </LinearLayout>

    <Spinner
        android:id="@+id/bookTypeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/book_type"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/bookYearOfPublicationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year_of_publication"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/bookStatusInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/book_status" />

    <Button
        android:id="@+id/bookUploadButton"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="#673AB7"
        android:text="@string/upload_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>