<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MovieInput" >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMovie"
        android:layout_width="match_parent"
        android:layout_height="581dp"
        android:layout_weight="10" />

    <EditText
        android:id="@+id/movieTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/movieDirectorFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/movie_director_first_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/movieDirectorLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/movie_director_last_name"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/movieTypeSpinner"
            android:layout_width="271dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/movie_type" />

        <EditText
            android:id="@+id/movieYearOfPublication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/year_of_publication"
            android:textSize="18sp" />
    </LinearLayout>

    <Spinner
        android:id="@+id/movieStatusSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/movie_status" />

    <Button
        android:id="@+id/movieUploadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#673AB7"
        android:text="@string/upload_button"
        android:textColor="#FFFFFF" />
</LinearLayout>