<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameInput" >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewGame"
        android:layout_width="match_parent"
        android:layout_height="592dp"
        android:layout_weight="10" />

    <EditText
        android:id="@+id/gameTitleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/developerNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_developer"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/gameTypeInput"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/game_type" />

        <EditText
            android:id="@+id/gameYearOfPublicationInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/year_of_publication"
            android:textSize="18sp" />

    </LinearLayout>

    <Spinner
        android:id="@+id/gameStatusInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/game_status" />

    <Button
        android:id="@+id/gameUploadButton"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="#673AB7"
        android:text="@string/upload_button"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>